# tutorial__actix-web_sqlx

./: .gitignore  Cargo.toml  README.txt
migrations/: 20210719150603_create_boards.sql  20210719150606_create_cards.sql  20210719175046_create_tokens.sql
src/: routes.rs
