[package]
name = "kanban"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
futures = "0.3.15"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "chrono", "postgres"] }
